# minion-tasks

./: CLAUDE.md  LICENSE  README.md  REQUIREMENTS.md  pyproject.toml
minion_tasks/: __init__.py  _schema.py  cli.py  dag.py  db.py  loader.py
scripts/: install.sh
task-flows/: _base.yaml  bugfix.yaml  build.yaml  feature.yaml  hotfix.yaml  research.yaml
tests/: conftest.py  test_cli.py  test_dag.py  test_db.py  test_loader.py
